# agent-accountability-evidence-layer

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
attack_corpus/: README.md
conformance/: asiep_v0.1_matrix.yaml
contexts/: asiep.context.jsonld
docs/: agent_native_design.md  evaluation_method.md  evidence_bundle_resolver.md  fdo_rocrate_packaging.md  invariants.md  repair_loop.md  research_note_v0.1.md  state_machine.md  trace_importer.md
examples/: invalid_hash_chain_break.json  invalid_missing_gate_report.json  invalid_promote_with_p2f_threshold_violation.json  invalid_promote_with_regression.json  invalid_transition_order.json  valid_chatbot_improvement.json
interfaces/: asiep_author_final_approval.schema.json  asiep_bundle_resolution.schema.json  asiep_citation_claim_map.schema.json  asiep_corpus_manifest.schema.json  asiep_crosswalk_matrix.schema.json  asiep_evaluation_report.schema.json  asiep_evidence_bundle.schema.json  asiep_fdo_record.schema.json  asiep_human_authoring_protocol.schema.json  asiep_import_request.schema.json  asiep_import_result.schema.json  asiep_latex_compile_report.schema.json  asiep_package_manifest.schema.json  asiep_package_request.schema.json  asiep_package_result.schema.json  asiep_paper_claim_registry.schema.json  asiep_paper_evidence_map.schema.json  asiep_prov_jsonld.schema.json  asiep_repair_plan.schema.json  asiep_rocrate_metadata.schema.json  asiep_source_registry.schema.json  asiep_submission_lint_report.schema.json  asiep_submission_manifest.schema.json  asiep_validator_output.schema.json  (+4 more)
(+243 files in other folders)
