[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-accountability-evidence-layer"
version = "0.1.0"
description = "ASIEP v0.1 schema and validator for agent self-improvement evidence."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AAEL contributors" }
]
dependencies = [
  "jsonschema>=4.21"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
asiep-validator = "asiep_validator.__main__:main"
asiep-repairer = "asiep_repairer.__main__:main"
asiep-resolver = "asiep_resolver.__main__:main"
asiep-importer = "asiep_importer.__main__:main"
asiep-packager = "asiep_packager.__main__:main"
asiep-evaluator = "asiep_evaluator.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
